samples/_failures_safe/1761668567_c67a6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb48732f.c: In function ‘print_stats’:
./samples/SAFE/__tmp_fb48732f.c:154:57: error: expected ‘)’ at end of input
  154 |     printf("Unique sources: %u\n", stats->unique_sources
      |           ~                                             ^
      |                                                         )
./samples/SAFE/__tmp_fb48732f.c:154:5: error: expected declaration or statement at end of input
  154 |     printf("Unique sources: %u\n", stats->unique_sources
      |     ^~~~~~
